{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 260,
  "lineage": "cbaeee2e-7ef2-dcb4-c237-ccb8c23a7960",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335228785:loadbalancer/app/strapi-load-balancer/cbcbb139351df8bc",
            "arn_suffix": "app/strapi-load-balancer/cbcbb139351df8bc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-load-balancer-1981324945.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335228785:loadbalancer/app/strapi-load-balancer/cbcbb139351df8bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-071c82434bece13d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d90368e83b17bfd"
              },
              {
                "subnet_id": "subnet-09663e551fefa22fb"
              }
            ],
            "subnets": [
              "subnet-01d90368e83b17bfd",
              "subnet-09663e551fefa22fb"
            ],
            "vpc_id": "vpc-0e9ac87e0014a9360",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.sub1",
            "aws_subnet.sub2",
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:730335228785:targetgroup/strapi-target-group/9a422fb9b52159cc",
            "arn_suffix": "targetgroup/strapi-target-group/9a422fb9b52159cc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:730335228785:targetgroup/strapi-target-group/9a422fb9b52159cc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-target-group",
            "port": 433,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e9ac87e0014a9360"
          },
          "dependencies": [
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "strapi-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e00961530ae1b55",
            "arn": "arn:aws:ec2:ap-south-1:730335228785:instance/i-07500bc2a51d6ec1a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07500bc2a51d6ec1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9607c507a2cd133",
            "private_dns": "ip-10-5-1-13.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.1.13",
            "public_dns": "ec2-13-127-62-197.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.62.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b7635470386d3012",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d90368e83b17bfd",
            "tags": {
              "Name": "AutoStrapi-[sharq]"
            },
            "tags_all": {
              "Name": "AutoStrapi-[sharq]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022ce9778a1f453de"
            ]
          },
          "dependencies": [
            "aws_security_group.auto-sg",
            "aws_subnet.sub1",
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335228785:internet-gateway/igw-0aa4b232725759c3f",
            "id": "igw-0aa4b232725759c3f",
            "owner_id": "730335228785",
            "vpc_id": "vpc-0e9ac87e0014a9360"
          },
          "dependencies": [
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335228785:route-table/rtb-0fc8ec0121f4f0093",
            "id": "rtb-0fc8ec0121f4f0093",
            "owner_id": "730335228785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa4b232725759c3f",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa4b232725759c3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9ac87e0014a9360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a4a0a4f59d7670c",
            "route_table_id": "rtb-0fc8ec0121f4f0093",
            "subnet_id": "subnet-01d90368e83b17bfd"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.sub1",
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff50fc59b5148c4c",
            "route_table_id": "rtb-0fc8ec0121f4f0093",
            "subnet_id": "subnet-09663e551fefa22fb"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.sub2",
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auto-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335228785:security-group/sg-022ce9778a1f453de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022ce9778a1f453de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Strapi Port",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "strapi-sg",
            "name_prefix": "",
            "owner_id": "730335228785",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9ac87e0014a9360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335228785:security-group/sg-071c82434bece13d3",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071c82434bece13d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cb-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "730335228785",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9ac87e0014a9360"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335228785:subnet/subnet-01d90368e83b17bfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d90368e83b17bfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e9ac87e0014a9360"
          },
          "dependencies": [
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335228785:subnet/subnet-09663e551fefa22fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09663e551fefa22fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e9ac87e0014a9360"
          },
          "dependencies": [
            "aws_vpc.auto-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "auto-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335228785:vpc/vpc-0e9ac87e0014a9360",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-08f83f2df91cbdb2a",
            "default_route_table_id": "rtb-036ccdfb448335bb3",
            "default_security_group_id": "sg-0f84fb465884093c0",
            "dhcp_options_id": "dopt-0b6d90d1c75e47a47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9ac87e0014a9360",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036ccdfb448335bb3",
            "owner_id": "730335228785",
            "tags": {
              "Name": "sharq-vpc[auto]"
            },
            "tags_all": {
              "Name": "sharq-vpc[auto]"
            }
          }
        }
      ]
    }
  ]
}